# CoffeeHouse_SoftwareTools

./: .gitignore  README.md  coffee.json  db.json  manage.py  pyproject.toml  questions.json  setup.cfg
.github/workflows/: checks.yml
CoffeeHouse_SoftwareTools/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
mysite/: .urls.py.swp  .views.py.swp  admin.py  forms.py  models.py  mysite_services.py  services.py  tests.py  urls.py  views.py
mysite/migrations/: 0001_initial.py  0002_alter_position_default_discount.py  0002_alter_user_birth_date.py  0003_alter_user_birth_date.py  0004_alter_post_url_alter_user_birth_date.py
mysite/static/css/: styles.css
mysite/templates/mysite/: .active_users.html.swp  .contacts.html.swp  active_users.html  base.html  blog.html  contacts.html  create_post.html  index.html  partners.html  post_detail.html  registration.html  success.html
mysite/templates/mysite/block/: .footer.html.swp  footer.html  navbar.html
static/css/: styles.css
